# elevate2ai

./: .gitignore  DEBUG_README.md  Dockerfile  OPENAI_README.md  README.md  app.db  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  run.py  setup.py  switchboard.py  switchboard_canvas.py  test.py  wa.py
app/: __init__.py  config.py  constants.py  db.py  logging.py  main.py  middleware.py  schemas.py
app/api/: ai.py  auth.py  debug.py  media.py  media_proxy.py  media_router.py  payment.py  unsplash.py  webhook.py
app/api/auth/: google.py  router.py  session.py  whatsapp.py
app/crud/: auth.py  base.py  payment.py
app/db/: base.py  supabase_client.py
app/middleware/: auth.py
app/models/: ai_data.py  field_source.py  media.py  oauth.py  session.py  user.py
app/services/: README.md  chat.py  media_manager.py  types.py  whatsapp.py
examples/: README.md  auth_example.html  auth_examples.py
heyoo/: whatsapp.py
heyoo/core/: __init__.py  base.py  media.py  messages.py  templates.py
logs/debug/: 20250513_160017_957390_after_CONTENT_TYPE_SELECTION.json  20250513_160040_957390_before_CAPTION_INPUT.json  20250513_160048_957390_before_WAITING_FOR_EVENT_NAME.json  20250513_160122_957390_before_WAITING_FOR_EVENT_IMAGE.json  20250513_160140_957390_before_MEDIA_SOURCE_SELECTION.json  20250513_160211_957390_before_WAITING_FOR_MEDIA_UPLOAD.json  20250513_160243_957390_before_CONFIRMATION.json
scripts/: diagnose.py
tests/: README.md  conftest.py  test_ai.py  test_auth.py  test_auth_utils.py  test_media.py  test_payment.py
(+72 files in other folders)
