[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevate2ai"
version = "0.1.0"
description = "Production-ready FastAPI template with Supabase integration"
authors = [{name = "Elevate2AI Team"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "supabase"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false