[project]
name = "elevate2ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.78.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
